syntax = "proto3";

package ouchihub.item.v1;

import "google/protobuf/empty.proto";

service ItemService {
  rpc GetDirectory(GetDirectoryRequest) returns (GetDirectoryResponse) {};
  rpc MoveItem(MoveItemRequest) returns (google.protobuf.Empty) {};
}

message GetDirectoryRequest {
  string directory_id = 1;
}

message GetDirectoryResponse {
  Directory directory = 1;
}

message MoveItemRequest {
  string dest_directory_id = 1;
  string target_id = 2;
}

message Directory {
  string id = 1;
  string name = 2;
  repeated Directory directories = 3;
  repeated File files = 4;
}

enum FileType {
  FILE_TYPE_UNSPECIFIED = 0;
}

message File {
  string id = 1;
  string name = 2;
  FileType type = 3;
}

message Item {
  oneof entity {
    Directory directory = 1;
    File file = 2;
  }
}
